fix overflow issues
[#25]

also fixed some of the spacing with the header and flash bar

--- a/app/assets/stylesheets/shared/donation_distribution.scss
+++ b/app/assets/stylesheets/shared/donation_distribution.scss
@@ -6,7 +6,16 @@
             height: 24px;
             margin-right: 3px;
         }
-        &__cause, &__percent {
+        &__cause {
+            font-size: 12px;
+            color: $text-body;
+            margin-top: 4px;
+
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        &__percent {
             font-size: 12px;
             color: $text-body;
             margin-top: 4px;
